Fix horizontal overflow problem

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
-/* 
+
 *{
     padding: 0;
     margin: 0;
-} */
+    }
 
 body, html {
       height: 100%;
@@ -30,9 +30,10 @@ body, html {
     background-size: cover;
     background-position: center center;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     text-align: center;
     display: table;
+
 
 }
 
